--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
     "seed": "node seed.js",
     "migrate": "node scripts/migrate-data.js",
     "dev:client": "cd ../frontend && npm run dev",
