Improve serverless stability with conditional route loading
- Add try-catch around route imports to prevent crashes
- Load database connection conditionally
- Add fallback routes for when services are unavailable
- Add test route for basic API functionality
- Improve index.js export for better Vercel compatibility
- Add maxDuration to prevent timeout issues

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,6 +12,11 @@
             "dest": "/index.js"
         }
     ],
+    "functions": {
+        "index.js": {
+            "maxDuration": 30
+        }
+    },
     "env": {
         "NODE_ENV": "production"
     }
