--- a/backend/package.json
+++ b/backend/package.json
@@ -36,8 +36,7 @@
     "mongoose-paginate-v2": "^1.9.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "stripe": "^18.5.0",
-    "uuid": "^12.0.0"
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
