--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,25 @@
     "seed": "node seed.js",
     "migrate": "node scripts/migrate-data.js",
     "dev:client": "cd ../frontend && npm run dev",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:client\""
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:client\"",
+    "prod:start": "NODE_ENV=production pm2 start ecosystem.config.js --env production",
+    "prod:stop": "pm2 stop grand-hotel-api",
+    "prod:restart": "pm2 restart grand-hotel-api",
+    "prod:reload": "pm2 reload grand-hotel-api",
+    "prod:logs": "pm2 logs grand-hotel-api",
+    "prod:monitor": "pm2 monit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:integration": "node scripts/integration-test.js",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "security:audit": "npm audit",
+    "security:fix": "npm audit fix",
+    "db:backup": "node scripts/backup-db.js",
+    "db:restore": "node scripts/restore-db.js",
+    "health": "node scripts/health-check.js",
+    "cleanup": "node scripts/cleanup-logs.js"
   },
   "keywords": [
     "hotel",
