--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
+    "terser": "^5.44.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.42.0",
     "vite": "^7.1.4"
